GERRIT_PATCHSET_REVISION in lf-infra-parameters
I need GERRIT_PATCHSET_REVISION
to add a verfied and then a submit on the info-vote job.

I was using patchset id, but that is wrong.

Also fix info-vote job to verify, sleep for a second,
and then submit based on GERRIT_PATCHSET_REVISION
when majority voting checks out.

Signed-off-by: Aric Gardner <agardner@linuxfoundation.org>
Change-Id: Ie9477b0e0b3cfc193469fe55bc59eecae72ef756

--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -432,6 +432,12 @@
               https://git-scm.com/book/en/v2/Git-Internals-The-Refspec
               For example: 'refs/heads/master'
       - string:
+          name: GERRIT_PATCHSET_REVISION
+          default: '$GERRIT_PATCHSET_REVISION'
+          description: |
+              Gerrit Trigger provided parameter to identify a patch set revision
+              so that it can be submitted by Non-Interactive Users from Gerrit.
+      - string:
           name: sha1
           default: 'origin/{branch}'
           description: |
