--- a/jjb/lf-info-vote.yaml
+++ b/jjb/lf-info-vote.yaml
@@ -7,7 +7,7 @@
     name: lf-info-vote-common
 
     gerrit_trigger_file_paths:
-      - compare-type: REG_EXP
+      - compare-type: ANT
         pattern: 'INFO.yaml'
 
     #####################
@@ -55,9 +55,6 @@
       - comment-added-contains-event:
           comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(vote)$'
       - comment-added-event:
-          approval-category: 'CRVW'
-          approval-value: 2
-      - comment-added:
           approval-category: 'Code-Review'
           approval-value: 2
 
