Pin requests to 2.21.0
request-2.22.0 does not work with python-3.4.9, so pin requests
to 2.21.0.

Change-Id: Id7e07f015fcc88ed5799b9fc8ba59d1de3be3424
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ deps =
     coala
     coala-bears
     pygments~=2.3.1
+    # request-2.22.0 does not work with python-3.4.9
+    requests~=2.21.0
     # Markdown lint requires nodejs
     nodeenv
 commands =
