Update gerrit comment trigger keywords with regex
Update gerrit comment trigger to use standard regex
and avoid triggering jobs, when these keywords are used as
gerrit comments between users.

Change-Id: Iac67e9508fd600650c4ed351094cfdaf2e212835
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -287,7 +287,7 @@
     gerrit_merge_triggers:
       - change-merged-event
       - comment-added-contains-event:
-          comment-contains-value: remerge$
+          comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(remerge)$'
 
     gerrit_trigger_file_paths:
       - compare-type: REG_EXP
@@ -737,7 +737,7 @@
     gerrit_merge_triggers:
       - change-merged-event
       - comment-added-contains-event:
-          comment-contains-value: remerge$
+          comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(remerge)$'
 
     #####################
     # Job Configuration #
@@ -1128,7 +1128,7 @@
                 exclude-no-code-change: false
             - draft-published-event
             - comment-added-contains-event:
-                comment-contains-value: recheck$
+                comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(recheck|reverify)$'
           projects:
             - project-compare-type: ANT
               project-pattern: '{project-pattern}'
@@ -1463,7 +1463,7 @@
     gerrit_merge_triggers:
       - change-merged-event
       - comment-added-contains-event:
-          comment-contains-value: remerge$
+          comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(remerge)$'
 
     #####################
     # Job Configuration #
