Update gerrit comment trigger keywords with regex
Update gerrit comment trigger to use standard regex
and avoid triggering jobs, when these keywords are used as
gerrit comments between users.

Change-Id: Iac67e9508fd600650c4ed351094cfdaf2e212835
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/lf-c-cpp-jobs.yaml
+++ b/jjb/lf-c-cpp-jobs.yaml
@@ -99,7 +99,7 @@
           server-name: '{gerrit-server-name}'
           trigger-on:
             - comment-added-contains-event:
-                comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(stage-release)$'
+                comment-contains-value: '^Patch Set\s+\d+:\s+stage-release\s*$'
           projects:
             - project-compare-type: 'ANT'
               project-pattern: '{project}'
@@ -262,7 +262,7 @@
           server-name: '{gerrit-server-name}'
           trigger-on:
             - comment-added-contains-event:
-                comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(stage-release)$'
+                comment-contains-value: '^Patch Set\s+\d+:\s+stage-release\s*$'
           projects:
             - project-compare-type: 'ANT'
               project-pattern: '{project}'
@@ -339,7 +339,7 @@
           exclude-no-code-change: false
       - draft-published-event
       - comment-added-contains-event:
-          comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(recheck|reverify)$'
+          comment-contains-value: '^Patch Set\s+\d+:\s+(remerge|reverify)\s*$'
 
     gerrit_trigger_file_paths:
       - compare-type: REG_EXP
