--- a/.jjb-test/lf-docker-jobs/docker-jobs.yaml
+++ b/.jjb-test/lf-docker-jobs/docker-jobs.yaml
@@ -7,7 +7,10 @@
     project: docker/project
     project-name: docker-project
     container-public-registry: pub-registry
-    container-snapshot-registry: snap-registry
+    container-push-registry: push-registry
+    docker-build-args: ''
     docker-name: docker-image-name
+    docker-root: docker
+    docker-use-params-from: yaml-file-params
     branch: master
     mvn-settings: docker-project-settings
