Update docker scripts
- docker-build: Allow DOCKER_ARGS to be empty. This is not
a required parameter, it can be empty.
- docker-get-git-describe: Remove container reference. The
CONTAINER_PUSH_REGISTRY already gets added in the docker-push
script. No need to add it again. Only process the tag variable.
- docker-get-yaml-tag: Rename image_name to image_build_tag
to match docker-get-git-describe. Add missing "DOCKER_NAME" in
the DOCKER_IMAGE. Only process the tag variable.
- docker-push: Update the correct image name and tag in the push
command.

Change-Id: Ic3aad7ae0f87b589ce5d57f6848f7e8e75f9b71e
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/lf-docker-jobs.yaml
+++ b/jjb/lf-docker-jobs.yaml
@@ -10,7 +10,6 @@
     builders:
       - inject:
           properties-content: |
-            DOCKER_NAME={docker-name}
             DOCKER_ROOT={docker-root}
       - conditional-step:
           condition-kind: regex-match
@@ -37,8 +36,10 @@
       - inject:
           properties-content: |
             DOCKER_ARGS={docker-build-args}
+            DOCKER_NAME={docker-name}
             DOCKER_ROOT={docker-root}
             CONTAINER_PULL_REGISTRY={container-public-registry}
+            CONTAINER_PUSH_REGISTRY={container-push-registry}
       - shell: !include-raw-escape:
           - ../shell/docker-build.sh
 
@@ -137,12 +138,13 @@
       - shell: '{pre_docker_build_script}'
       - lf-docker-get-container-tag:
           docker-use-params-from: '{docker-use-params-from}'
-          docker-name: '{docker-name}'
           docker-root: '{docker-root}'
       - lf-docker-build:
           docker-build-args: '{docker-build-args}'
+          docker-name: '{docker-name}'
           docker-root: '{docker-root}'
           container-public-registry: '{container-public-registry}'
+          container-push-registry: '{container-push-registry}'
       - shell: '{post_docker_build_script}'
       - lf-provide-maven-settings-cleanup
 
@@ -173,12 +175,13 @@
       - shell: '{pre_docker_build_script}'
       - lf-docker-get-container-tag:
           docker-use-params-from: '{docker-use-params-from}'
-          docker-name: '{docker-name}'
           docker-root: '{docker-root}'
       - lf-docker-build:
           docker-build-args: '{docker-build-args}'
+          docker-name: '{docker-name}'
           docker-root: '{docker-root}'
           container-public-registry: '{container-public-registry}'
+          container-push-registry: '{container-push-registry}'
       - shell: '{post_docker_build_script}'
       # Provided all steps have already passed, push the docker image
       - lf-docker-push:
