--- a/jjb/lf-docker-jobs.yaml
+++ b/jjb/lf-docker-jobs.yaml
@@ -131,7 +131,8 @@
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
       - shell: '{pre_docker_build_script}'
-      - lf-docker-get-container-tag
+      - lf-docker-get-container-tag:
+          docker-use-params-from: '{docker-use-params-from}'
       - lf-docker-build
       - shell: '{post_docker_build_script}'
       - lf-provide-maven-settings-cleanup
@@ -161,7 +162,8 @@
           global-settings-file: 'global-settings'
           settings-file: '{mvn-settings}'
       - shell: '{pre_docker_build_script}'
-      - lf-docker-get-container-tag
+      - lf-docker-get-container-tag:
+          docker-use-params-from: '{docker-use-params-from}'
       - lf-docker-build
       - shell: '{post_docker_build_script}'
       # Provided all steps have already passed, push the docker image
