Add missing file-based triggers to docker templates
Change-Id: If1dd342d9fe8591028cd1fabcb7c830e41df2fe5
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>

--- a/jjb/lf-docker-jobs.yaml
+++ b/jjb/lf-docker-jobs.yaml
@@ -130,6 +130,10 @@
       - comment-added-contains-event:
           comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(recheck|reverify)$'
 
+    gerrit_trigger_file_paths:
+      - compare-type: REG_EXP
+        pattern: '.*'
+
     builders:
       - lf-infra-pre-build
       - lf-infra-docker-login:
@@ -166,6 +170,10 @@
       - change-merged-event
       - comment-added-contains-event:
           comment-contains-value: remerge$
+
+    gerrit_trigger_file_paths:
+      - compare-type: REG_EXP
+        pattern: '.*'
 
     builders:
       - lf-infra-pre-build
@@ -214,6 +222,7 @@
               branches:
                 - branch-compare-type: ANT
                   branch-pattern: '**/{branch}'
+              file-paths: '{obj:gerrit_trigger_file_paths}'
 
 - job-template:
     name: '{project-name}-docker-verify-{stream}'
@@ -281,6 +290,7 @@
               branches:
                 - branch-compare-type: ANT
                   branch-pattern: '**/{branch}'
+              file-paths: '{obj:gerrit_trigger_file_paths}'
 
 - job-template:
     name: '{project-name}-docker-merge-{stream}'
