Add missing file-based triggers to docker templates
Includes gerrit_trigger_file_paths and github_included_regions.
In documention: add github_included_regions parameter and
correct gerrit_verify_triggers to gerrit_merge_triggers.

Change-Id: If1dd342d9fe8591028cd1fabcb7c830e41df2fe5
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>

--- a/jjb/lf-docker-jobs.yaml
+++ b/jjb/lf-docker-jobs.yaml
@@ -130,6 +130,14 @@
       - comment-added-contains-event:
           comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(recheck|reverify)$'
 
+    gerrit_trigger_file_paths:
+      - compare-type: REG_EXP
+        pattern: '.*'
+
+    # github_included_regions MUST match gerrit_trigger_file_paths
+    github_included_regions:
+      - '.*'
+
     builders:
       - lf-infra-pre-build
       - lf-infra-docker-login:
@@ -166,6 +174,14 @@
       - change-merged-event
       - comment-added-contains-event:
           comment-contains-value: remerge$
+
+    gerrit_trigger_file_paths:
+      - compare-type: REG_EXP
+        pattern: '.*'
+
+    # github_included_regions MUST match gerrit_trigger_file_paths
+    github_included_regions:
+      - '.*'
 
     builders:
       - lf-infra-pre-build
@@ -214,6 +230,7 @@
               branches:
                 - branch-compare-type: ANT
                   branch-pattern: '**/{branch}'
+              file-paths: '{obj:gerrit_trigger_file_paths}'
 
 - job-template:
     name: '{project-name}-docker-verify-{stream}'
@@ -281,6 +298,7 @@
               branches:
                 - branch-compare-type: ANT
                   branch-pattern: '**/{branch}'
+              file-paths: '{obj:gerrit_trigger_file_paths}'
 
 - job-template:
     name: '{project-name}-docker-merge-{stream}'
