Add trigger-on-cron to docker merge job
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>
Change-Id: I6e1d46d3b4e10a5e694201aeb493a4ef152ee954

--- a/jjb/lf-docker-jobs.yaml
+++ b/jjb/lf-docker-jobs.yaml
@@ -158,6 +158,7 @@
 
 - docker_merge_common: &docker_merge_common
     name: docker-merge-common
+    cron: ''
 
     scm:
       - lf-infra-gerrit-scm:
@@ -289,6 +290,7 @@
     <<: *docker_merge_common
 
     triggers:
+      - timed: '{obj:cron}'
       - gerrit:
           server-name: '{gerrit-server-name}'
           trigger-on: '{obj:gerrit_merge_triggers}'
@@ -330,6 +332,7 @@
           jenkins-ssh-credential: '{jenkins-ssh-credential}'
 
     triggers:
+      - timed: '{obj:cron}'
       - github
       - pollscm:
           cron: ''
