--- a/.jjb-test/lf-docker-jobs/docker-jobs.yaml
+++ b/.jjb-test/lf-docker-jobs/docker-jobs.yaml
@@ -8,6 +8,7 @@
     project-name: docker-project
     container-public-registry: pub-registry
     container-push-registry: push-registry
+    container-tag-file-path: 'location/'
     docker-build-args: ''
     docker-name: docker-image-name
     docker-root: docker
