Add numpy to tox.ini
Change-Id: I358a77f71e86f0c86966fbc6e1eb7389e3268cdd
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ deps =
     requests~=2.21.0
     # Markdown lint requires nodejs
     nodeenv
+    numpy
 commands =
     nodeenv -p
     npm install --global remark-cli remark-lint write-good
